--- a/app/globals.css
+++ b/app/globals.css
@@ -996,7 +996,7 @@ body {
 }
 
 .fheader-bottom-alt > h6 {
-  color: #DFDFDF;
+  color: #dfdfdf;
   font-size: 12px;
   font-style: normal;
   font-weight: 600;
@@ -1005,7 +1005,7 @@ body {
 }
 
 .fheader-bottom-alt > p {
-  color: #FAFAFA;
+  color: #fafafa;
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
@@ -1016,7 +1016,7 @@ body {
   display: grid;
   grid-template-rows: repeat(2, auto);
   justify-items: center;
-  row-gap: 56px;
+  row-gap: 24px;
 }
 
 .zheader-top1 > div:nth-of-type(2) {
@@ -1027,25 +1027,61 @@ body {
   color: #161718;
   display: grid;
   grid-template-rows: repeat(2, auto);
-  row-gap: 85px;
+  row-gap: 12px;
 }
 
 .zheader-top2 > h1 {
   max-width: 1113px;
-  font-size: 172px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 190px; /* 110.465% */
-}
-
-.zheader-top2 > p {
-  max-width: 600px;
+  color: #161718;
   font-size: 32px;
   font-style: normal;
   font-weight: 700;
-  line-height: 48px; /* 150% */
-  justify-self: end;
-  margin-right: 84px;
+  line-height: 119%; /* 38.08px */
+}
+
+.zheader-top2 > p {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 24px */
+}
+
+.zheader-top3 {
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  width: 100%;
+  gap: 24px;
+}
+
+.zheader-top3 > div {
+  display: grid;
+  gap: 8px;
+  align-content: flex-start;
+}
+
+.zheader-top3 h6 {
+  color: #363738;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.zheader-top3 p {
+  display: grid;
+  gap: 12px;
+  color: #898a8a;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.glow-z {
+  background: linear-gradient(92deg, #7d37d8 0%, rgba(221, 110, 32, 0.91) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 @media only screen and (min-width: 763px) {
@@ -1053,7 +1089,100 @@ body {
 
 @media only screen and (min-width: 1024px) {
   /* For Flow-Finance */
-  
+
+  .fheader-bottom-alt {
+    display: grid;
+    grid-template-rows: auto auto;
+    gap: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .fheader-bottom-alt > h6 {
+    color: #dfdfdf;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 119%; /* 14.28px */
+    text-transform: uppercase;
+  }
+
+  .fheader-bottom-alt > p {
+    color: #fafafa;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 150%; /* 24px */
+  }
+
+  .zheader-top1 {
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+    justify-items: center;
+    row-gap: 56px;
+  }
+
+  .zheader-top1 > div:nth-of-type(2) {
+    display: grid;
+  }
+
+  .zheader-top2 {
+    color: #161718;
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+    row-gap: 85px;
+  }
+
+  .zheader-top2 > h1 {
+    max-width: 1113px;
+    font-size: 172px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 190px; /* 110.465% */
+  }
+
+  .zheader-top2 > p {
+    max-width: 600px;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 48px; /* 150% */
+    justify-self: end;
+    margin-right: 84px;
+  }
+
+  .zheader-top3 {
+    display: grid;
+    grid-template-columns: repeat(3, max-content);
+    width: 100%;
+    gap: 170px;
+    grid-template-rows: auto;
+  }
+
+  .zheader-top3 > div {
+    display: grid;
+    gap: 8px;
+    align-content: flex-start;
+  }
+
+  .zheader-top3 h6 {
+    color: #363738;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .zheader-top3 p {
+    display: grid;
+    gap: 8px;
+    color: #898a8a;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
   .fheader-bottom-alt {
     display: grid;
     grid-template-rows: auto auto;
@@ -1709,7 +1838,7 @@ body {
     justify-items: center;
     align-items: start;
     width: 100%;
-    padding: 0px!important;
+    padding: 0px !important;
   }
 
   .flast-cont > div:nth-of-type(1) {
@@ -1725,7 +1854,7 @@ body {
   .flast-cont > div > img {
     width: 100%;
     height: auto;
-    max-width: 100%!important;
+    max-width: 100% !important;
   }
 
   .photoG {
