--- a/app/globals.css
+++ b/app/globals.css
@@ -1210,13 +1210,14 @@ body {
 .parallel-pollen {
   padding-top: 80px;
   padding-bottom: 80px;
-  padding-left: 20px; padding-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   display: grid;
   gap: 16px;
 }
 
 .parallel-pollen-h2 {
-  color:  #424344;
+  color: #424344;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -1224,11 +1225,202 @@ body {
   text-transform: uppercase;
 }
 
+.onb-cont, .onb-cont2 {
+  display: grid;
+  gap: 32px;
+  padding: 80px 0;
+}
+
+.onb-cont h2,
+.onb-cont2 h2,
+.pdash-cont h2 {
+  color: #252627;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 119%; /* 28.56px */
+}
+
+.onbImg-cont {
+  display: grid;
+  gap: 24px;
+  overflow: hidden;
+  justify-content: center;
+}
+
+.pdash-cont {
+  padding-bottom: 64px;
+  padding-top: 64px;
+  gap: 24px;
+  display: grid;
+}
+
+.pd-cont {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.pd-cont > div:nth-of-type(1) {
+  padding-right: 20px;
+}
+
+.pd-cont > div:nth-of-type(3) {
+  padding-left: 20px;
+}
+
+.right-point {
+  display: grid;
+  gap: 24px;
+}
+
+.pdrp-cont {
+  display: grid;
+  gap: 4px;
+}
+
+.pdrp-cont p {
+  width: 148px;
+  color: #7b7b7c;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 150% */
+}
+
+.pdrp {
+  background: #f7f2fe;
+  width: 16px;
+  height: 16px;
+  color: #540a82;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1000px;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 154%; /* 24.64px */
+}
+
+.allc-p {
+  color: #363738;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 24px */
+  padding-top: 12px;
+}
+
+
 @media only screen and (min-width: 763px) {
 }
 
 @media only screen and (min-width: 1024px) {
   /* Pollen */
+
+  .allc-p {
+    color: #363738;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 48px; /* 150% */
+    padding-top: 72px;
+    max-width: 698px;
+    align-self: center;
+  }
+  
+  .pdash-cont {
+    padding-bottom: 142px;
+    padding-top: 80px;
+    gap: 78px;
+    display: grid;
+  }
+
+  .pd-cont {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .pd-cont > div:nth-of-type(1) {
+    padding-right: 89px;
+  }
+
+  .pd-cont > div:nth-of-type(3) {
+    padding-left: 163px;
+  }
+
+  .right-point {
+    display: grid;
+    gap: 24px;
+  }
+
+  .pdrp-cont {
+    display: grid;
+    gap: 8px;
+  }
+
+  .pdrp-cont p {
+    width: 210px;
+    color: #7b7b7c;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px; /* 150% */
+  }
+
+  .pdrp {
+    background: #f7f2fe;
+    width: 40px;
+    height: 40px;
+    color: #540a82;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1000px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 154%; /* 24.64px */
+  }
+
+  .onb-cont {
+    display: grid;
+    gap: 145px;
+    padding-top: 104px;
+    padding-bottom: 160px;
+  }
+
+  .onb-cont2 {
+    display: grid;
+    gap: 110px;
+    padding-top: 104px;
+    padding-bottom: 160px;
+  }
+
+  .onb-cont2 h2,
+  .onb-cont h2,
+  .pdash-cont h2 {
+    color: #252627;
+    font-size: 136px;
+    font-style: normal;
+    font-weight: 860;
+    line-height: 140px; /* 102.941% */
+  }
+
+  .onbImg-cont {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    gap: 24px;
+    overflow: hidden;
+    justify-content: center;
+  }
 
   .pp-cover-cont {
     display: grid;
@@ -1264,7 +1456,8 @@ body {
   .parallel-pollen {
     padding-top: 209px;
     padding-bottom: 113px;
-    padding-left: 24px; padding-right: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
     display: grid;
     gap: 24px;
   }
