--- a/app/globals.css
+++ b/app/globals.css
@@ -1454,13 +1454,126 @@ body {
   padding-left: 24px;
   padding-right: 24px;
   display: grid;
-  gap: 12px
+  gap: 12px;
+}
+
+.yc-cont,
+.yc {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.yc-cont {
+  gap: 32px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.yc > h1 {
+  color: #f5f5f5;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 119%; /* 28.56px */
+  letter-spacing: 0.48px;
+  padding-top: 24px;
+  padding-bottom: 16px;
+}
+
+.yc-s {
+  color: #f5f5f5;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 119%; /* 16.66px */
+  text-transform: uppercase;
+}
+
+.m2-cont {
+  display: grid;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  padding-left: 24px;
+  padding-right: 24px;
+  gap: 24px
+}
+
+.m2c-cont {
+  display: grid;
+  gap: 54px;
+  justify-content: center;
+  justify-items: center;
+}
+
+.m2-cont-h2 {
+  color: #252627;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 36px */
 }
 
 @media only screen and (min-width: 763px) {
 }
 
 @media only screen and (min-width: 1024px) {
+
+  /* Yoohoo */
+
+  .m2-cont {
+    display: grid;
+    padding-top: 96px;
+    padding-bottom: 120px;
+    padding-left: 24px;
+    padding-right: 24px;
+    gap: 96px
+  }
+  
+  .m2c-cont {
+    display: grid;
+    gap: 231px;
+    justify-content: center;
+    justify-items: center;
+  }
+  
+  .m2c-cont > div:nth-of-type(2) {
+    justify-self: start;
+    padding-left: 54px;
+  }
+
+  .m2-cont-h2 {
+    color: #252627;
+    font-size: 164px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  .yc-cont {
+    gap: 138px;
+  }
+
+  .yc > h1 {
+    color: #f5f5f5;
+    font-size: 180px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+
+  .yc-s {
+    color: #f5f5f5;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+  }
+
   /* Sorolingo */
 
   .pmeasure {
