--- a/app/globals.css
+++ b/app/globals.css
@@ -1674,7 +1674,7 @@ body {
 }
 
 .cnary-mulc {
-  color:#161718;
+  color: #161718;
   text-align: center;
   font-size: 24px;
   font-style: normal;
@@ -1685,11 +1685,135 @@ body {
   padding-top: 80px;
 }
 
+.impact-2d {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.impact-cont {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: left;
+  align-items: start;
+  padding: 0 20px;
+}
+
+.impact-cont > h2 {
+  color: #dfdfdf;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 119%; /* 14.28px */
+  text-transform: uppercase;
+}
+
+.imcard {
+  padding: 16px;
+  gap: 12px;
+  display: grid;
+  align-content: space-between;
+  border-radius: 20px;
+  border: 1px solid #363738;
+}
+
+.imcard > p {
+  color: #7b7b7c;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 170%; /* 24px */
+}
+
+.imcard > div {
+  display: grid;
+  gap: 4px;
+}
+
+.imcard > div > h6 {
+  color: #dfdfdf;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%; /* 18px */
+}
+
+.imcard > div > h2 {
+  color: #898a8a;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%; /* 18px */
+}
+
 @media only screen and (min-width: 763px) {
 }
 
 @media only screen and (min-width: 1024px) {
   /* Contentionary */
+
+  .impact-2d {
+    display: flex;
+    gap: 24px;
+    flex-direction: row;
+  }
+
+  .impact-cont {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    justify-content: left;
+    align-items: start;
+    padding: 0 24px;
+  }
+
+  .impact-cont > h2 {
+    color: #dfdfdf;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+  }
+
+  .imcard {
+    padding: 16px;
+    gap: 24px;
+    display: grid;
+    align-content: space-between;
+    border-radius: 20px;
+    border: 1px solid #363738;
+  }
+
+  .imcard > p {
+    color: #7b7b7c;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
+  }
+
+  .imcard > div {
+    display: grid;
+    gap: 12px;
+  }
+
+  .imcard > div > h6 {
+    color: #dfdfdf;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .imcard > div > h2 {
+    color: #898a8a;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
 
   .cont-cta {
     display: inline-flex;
@@ -2949,18 +3073,17 @@ body {
 }
 
 @media only screen and (min-width: 1280px) {
-  
-.cnary-mulc {
-  color: #161718;
-  text-align: center;
-  font-size: 136px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  display: grid;
-  gap: 72px;
-  padding-top: 112px;
-}
+  .cnary-mulc {
+    color: #161718;
+    text-align: center;
+    font-size: 136px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    display: grid;
+    gap: 72px;
+    padding-top: 112px;
+  }
   .cnary-hcont h1 {
     padding-top: 16px;
     padding-bottom: 12px;
