updated links and buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -807,6 +807,10 @@ body {
   line-height: 16px;
 }
 
+.fheader-button:hover span {
+  color: #69a9e9 !important;
+}
+
 .fheader-top1 {
   display: grid;
   justify-items: center;
@@ -1902,89 +1906,83 @@ body {
 }
 
 .aa1:hover span {
-  color: white!important;
+  color: white !important;
 }
 
 .aa1:hover .ac1 {
-  display: block!important;
+  display: block !important;
 }
-
 
 .bb1:hover .ab1 {
   display: none;
 }
 
 .bb1:hover span {
-  color: white!important;
+  color: white !important;
 }
 
 .bb1:hover .ac1 {
-  display: block!important;
+  display: block !important;
 }
-
 
 .cc1:hover .ab1 {
   display: none;
 }
 
 .cc1:hover span {
-  color: white!important;
+  color: white !important;
 }
 
 .cc1:hover .ac1 {
-  display: block!important;
+  display: block !important;
 }
-
 
 .dd1:hover .ab1 {
   display: none;
 }
 
 .dd1:hover span {
-  color: white!important;
+  color: white !important;
 }
 
 .dd1:hover .ac1 {
-  display: block!important;
+  display: block !important;
 }
-
 
 .ee1:hover .ab1 {
   display: none;
 }
 
 .ee1:hover span {
-  color: white!important;
+  color: white !important;
 }
 
 .ee1:hover .ac1 {
-  display: block!important;
+  display: block !important;
 }
-
 
 .ff1:hover .ab1 {
   display: none;
 }
 
 .ff1:hover span {
-  color: white!important;
+  color: white !important;
 }
 
 .ff1:hover .ac1 {
-  display: block!important;
+  display: block !important;
 }
-
 
 .gg1:hover .ab1 {
   display: none;
 }
 
 .gg1:hover span {
-  color: white!important;
+  color: white !important;
 }
 
 .gg1:hover .ac1 {
-  display: block!important;
+  display: block !important;
 }
 
 .xx1:hover .yy1 {
@@ -1997,10 +1995,18 @@ body {
 
 .olx:hover .olx2 {
   display: block;
-  }
-  .olx:hover .olx3 {
+}
+.olx:hover .olx3 {
   display: none;
-  }
+}
+
+.xyx1:hover .xyx2 {
+  display: block;
+}
+
+.xyx1:hover .xyx3 {
+  display: none;
+}
 
 @media only screen and (min-width: 763px) {
 }
