updated sitemap, metadata

--- a/app/globals.css
+++ b/app/globals.css
@@ -78,6 +78,8 @@ body {
     "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji";
   line-height: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @layer utilities {
